--- a/src/DaCodFatha/Views/Account/Index.cshtml
+++ b/src/DaCodFatha/Views/Account/Index.cshtml
@@ -11,10 +11,16 @@
 {
     <h4>Like I Said, Blood is Thicker than Water.</h4>
     <h3>You are Family Now <span><strong>@User.Identity.Name!</strong></span></h3>
+
+    <h2>@Html.ActionLink("Home", "Index", "Main")</h2>
+    <h2>@Html.ActionLink("Products", "ProdAdmin", "Main")</h2>
+    <h2>@Html.ActionLink("Product Line (Visitor Page)", "Product", "Main")</h2>
+    <h2>@Html.ActionLink("Newsletter List", "NewsAdmin", "Main")</h2>
+    <h2>@Html.ActionLink("Newsletter (Visitor Page)", "Newsletter", "Main")</h2>
+
     @using (Html.BeginForm("Log Off", "Account"))
     {
         <input type="submit" value="Log Out" class="btn btn-default"/>
-
     }
 }
 else
