--- a/src/DaCodFatha/Views/Account/Register.cshtml
+++ b/src/DaCodFatha/Views/Account/Register.cshtml
@@ -7,7 +7,7 @@
 
 @model RegisterViewModel
 
-<h2>Register to Receive Our Monthly Newsletter</h2>
+<h2>Register New Admin</h2>
 <hr />
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
@@ -20,5 +20,7 @@
 
     @Html.LabelFor(m => m.ConfirmPassword)
     @Html.PasswordFor(m => m.ConfirmPassword)
+
+    <input type="submit" value="Register Admin" />
 
 }
