Fix news admin view page bug

--- a/src/DaCodFatha/Views/Main/NewsAdmin.cshtml
+++ b/src/DaCodFatha/Views/Main/NewsAdmin.cshtml
@@ -9,7 +9,7 @@
     <h3 class="mem-list">List of Newsletter Members</h3>
 </div>
 
-@if (Model.Any())
+@if (Model!=null)
 {
 
     foreach (var listmem in Model)
