--- a/src/DaCodFatha/Views/Main/ProdAdmin.cshtml
+++ b/src/DaCodFatha/Views/Main/ProdAdmin.cshtml
@@ -3,4 +3,29 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>prod for admin</h1>
+@model IEnumerable<DaCodFatha.Models.Product>
+
+
+
+<div class="create">
+    @Html.ActionLink("Add New Product", "Create", "Main")
+</div>
+
+@if (Model != null)
+{
+
+    @foreach (var listprod in Model)
+    {
+        <div class="disp-area">
+            <h3 class="name">@Html.DisplayFor(modelItem => listprod.Name)</h3>
+            <img class="image">@Html.DisplayFor(modelItem => listprod.Image) />
+            <h4 class="desc">@Html.DisplayFor(modelItem => listprod.Desc)</h4>
+            @Html.ActionLink("Edit", "Edit", new { id = listprod.Id }) | @Html.ActionLink("Waste'em", "Delete", new { id = listprod.Id })
+        </div>
+        }
+    }
+    else
+    {
+        <h3>No products listed. Add to Product Line</h3>
+    }
+
