--- a/src/DaCodFatha/Views/Main/Product.cshtml
+++ b/src/DaCodFatha/Views/Main/Product.cshtml
@@ -11,8 +11,7 @@
 {
     <div class="disp-area">
         <h3 class="name">@Html.DisplayFor(modelItem => listprod.Name)</h3>
-        <img class="image">@Html.DisplayFor(modelItem => listprod.Image) />
         <h4 class="desc">@Html.DisplayFor(modelItem => listprod.Desc)</h4>
-
+        <img src="@Html.DisplayFor(modelItem => listprod.Image)"/>
     </div>
 }
