add Styling and readme change

--- a/src/DaCodFatha/Views/Account/Index.cshtml
+++ b/src/DaCodFatha/Views/Account/Index.cshtml
@@ -5,8 +5,10 @@
 
 @using System.Security.Claims
 
-<h2>Identity Authentication</h2>
+<h3>Identity Authentication</h3>
 <hr />
+<hr />
+
 @if (User.Identity.IsAuthenticated)
 {
     <h4>Like I Said, Blood is Thicker than Water.</h4>
@@ -27,5 +29,5 @@ else
 {
     <h3>Hey Small Fry! Say Hello to My Little Friend</h3>
     <h4>@Html.ActionLink("Register", "Register")</h4>
-    <h4>@Html.ActionLink("Show Us You Are One of Us", "Login")</h4>
+    <h4>@Html.ActionLink("Show Us You Are One of Us (Log In)", "Login")</h4>
 }
