--- a/src/DaCodFatha/Views/Shared/_Layout.cshtml
+++ b/src/DaCodFatha/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-          <h3 class="navbar-brand">@Html.ActionLink("LogoHERE~!", "Index", "Main")</h3>
+          <img class="navbar-brand" src="http://wdrb.images.worldnow.com/images/6855498_G.jpg" />
       </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
