--- a/src/DaCodFatha/wwwroot/css/styles.css
+++ b/src/DaCodFatha/wwwroot/css/styles.css
@@ -1,9 +1,42 @@
 ﻿body {
 }
 
+html {
+    color: lightgray;
+}
 
 .HeroMain {
     max-width: 100%;
     min-height: 383px;
     outline: red 5px solid;
+}
+
+
+.disp-area {
+    width: 550px;
+    height: 440px;
+    margin: 3%;
+    float: left;
+    display: inline-block;
+}
+
+.image {
+    width: 480px;
+    height: 360px;
+    padding: 10px;
+    box-shadow: 2px 2px 2px gray;
+}
+
+h1 {
+}
+
+nav.navbar.navbar-default {
+background: black;
+}
+
+img.navbar-brand {
+    width: 100px;
+    height: auto;
+}
+div.disp-area {
 }
